[tool.poetry]
name = "ibroadcastaio"
version = "0.3.0"
description = "Client for async communication with the iBroadcast api."
authors = ["Rob Sonke <rob@tigrou.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.10.10"
pre-commit = "^4.0.1"
pylint = "^3.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[tool.poetry.scripts]
example = "example:main"
test = "unittest:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
